--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frames Demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="w-full bg-zinc-900">
+    <div class="w-full h-screen bg-black landing"></div>
+    <div class="w-full bg-zinc-900 canv">
         <div class="parent relative top-0 left-0 w-full h-[700vh]">
             <div class="w-full sticky top-0 left-0 h-screen">
                 <canvas class="w-full h-screen" id="frame"></canvas>
@@ -25,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <script>
         const canvas = document.querySelector('canvas');
         const context = canvas.getContext("2d");
@@ -58,9 +59,9 @@
             if (index >= 0 && index <= frames.maxIndex) {
                 const img = images[index];
 
-               
+
                 if (!img || !img.complete || img.naturalWidth === 0) {
-                    return; 
+                    return;
                 }
 
                 canvas.width = window.innerWidth;
@@ -87,6 +88,7 @@
 
 
         function startAnimation() {
+
             var tl = gsap.timeline({
                 scrollTrigger: {
                     trigger: ".parent",
@@ -105,6 +107,7 @@
 
         preloadImages();
     </script>
+    <script src="lenis.js"></script>
 </body>
 
 </html>
