landing page animation added

--- a/index.html
+++ b/index.html
@@ -7,108 +7,244 @@
     <title>Frames Demo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="w-full h-screen bg-black landing"></div>
-    <div class="w-full bg-zinc-900 canv">
-        <div class="parent relative top-0 left-0 w-full h-[700vh]">
-            <div class="w-full sticky top-0 left-0 h-screen">
-                <canvas class="w-full h-screen" id="frame"></canvas>
+    <div class="w-full h-screen landing">
+        <div class="main">
+            <div class="page-1">
+
+                <div class="heading-1">
+                    <span class="line">
+                        <h1 class="heading">Greener,&nbsp;Cleaner,&nbsp;Sustainable</h1>
+                    </span>
+                    <span class="line">
+                        <p class="paragraph">
+                            Home-grown,&nbsp;organic&nbsp;and&nbsp;bio&nbsp;degradable&nbsp;packaging&nbsp;material
+                        </p>
+                    </span>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="w-full bg-zinc-900 canv">
+            <div class="parent relative top-0 left-0 w-full h-[700vh]">
+                <div class="w-full sticky top-0 left-0 h-screen">
+                    <canvas class="w-full h-screen" id="frame"></canvas>
+                </div>
+            </div>
+        </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+            integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
-        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
-    <script>
-        const canvas = document.querySelector('canvas');
-        const context = canvas.getContext("2d");
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+            integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+        <script>
+            gsap.registerPlugin(ScrollTrigger);
 
-        const frames = {
-            currentIndex: 0,
-            maxIndex: 570
-        };
+            const lenis = new Lenis();
 
-        var imagesLoaded = 0;
-        const images = [];
-
-        function preloadImages() {
-            for (var i = 1; i <= frames.maxIndex; i++) {
-                const imageUrl = `./frames2/frame_${i.toString().padStart(4, "0")}.jpeg`;
-                const img = new Image();
-                img.src = imageUrl;
-                img.onload = () => {
-                    imagesLoaded++;
-                    if (imagesLoaded === frames.maxIndex) {
-                        loadImage(frames.currentIndex);
-                        startAnimation();
-                    }
-                }
-                images.push(img);
+            function raf(time) {
+                lenis.raf(time);
+                requestAnimationFrame(raf);
             }
-        }
 
-        function loadImage(index) {
-            if (index >= 0 && index <= frames.maxIndex) {
-                const img = images[index];
+            requestAnimationFrame(raf);
 
 
-                if (!img || !img.complete || img.naturalWidth === 0) {
-                    return;
-                }
+            gsap.set(".canv", { scale: 0.5 });
 
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight;
-
-                const scaleX = canvas.width / img.width;
-                const scaleY = canvas.height / img.height;
-                const scale = Math.max(scaleX, scaleY);
-
-                const newWidth = img.width * scale;
-                const newHeight = img.height * scale;
-
-                const offsetX = (canvas.width - newWidth) / 2;
-                const offsetY = (canvas.height - newHeight) / 2;
-
-                context.clearRect(0, 0, canvas.width, canvas.height);
-                context.imageSmoothingEnabled = true;
-                context.imageSmoothingQuality = "high";
-                context.drawImage(img, offsetX, offsetY, newWidth, newHeight);
-                frames.currentIndex = index;
-            }
-        }
-
-
-
-        function startAnimation() {
-
-            var tl = gsap.timeline({
+            gsap.to(".canv", {
+                scale: 1,
+                ease: "power2.out",
                 scrollTrigger: {
-                    trigger: ".parent",
-                    start: "top top",
-                    scrub: 2
+                    trigger: ".landing",
+                    start: "bottom 99%",
+                    scrub: 2,
                 }
             });
 
-            tl.to(frames, {
-                currentIndex: frames.maxIndex,
-                onUpdate: function () {
-                    loadImage(Math.floor(frames.currentIndex));
-                }
-            });
-        }
 
-        preloadImages();
-    </script>
-    <script src="lenis.js"></script>
+            const canvas = document.querySelector('canvas');
+            const context = canvas.getContext("2d");
+
+            const frames = {
+                currentIndex: 0,
+                maxIndex: 570
+            };
+
+            let imagesLoaded = 0;
+            const images = [];
+
+            function preloadImages() {
+                for (let i = 1; i <= frames.maxIndex; i++) {
+                    const imageUrl = `./frames2/frame_${i.toString().padStart(4, "0")}.jpeg`;
+                    const img = new Image();
+                    img.src = imageUrl;
+                    img.onload = () => {
+                        imagesLoaded++;
+                        if (imagesLoaded === frames.maxIndex) {
+                            loadImage(frames.currentIndex);
+                            startAnimation();
+                        }
+                    };
+                    images.push(img);
+                }
+            }
+
+            function loadImage(index) {
+                if (index >= 0 && index <= frames.maxIndex) {
+                    const img = images[index];
+                    if (!img || !img.complete || img.naturalWidth === 0) {
+                        return;
+                    }
+
+                    canvas.width = window.innerWidth;
+                    canvas.height = window.innerHeight;
+
+                    const scaleX = canvas.width / img.width;
+                    const scaleY = canvas.height / img.height;
+                    const scale = Math.max(scaleX, scaleY);
+
+                    const newWidth = img.width * scale;
+                    const newHeight = img.height * scale;
+
+                    const offsetX = (canvas.width - newWidth) / 2;
+                    const offsetY = (canvas.height - newHeight) / 2;
+
+                    context.clearRect(0, 0, canvas.width, canvas.height);
+                    context.imageSmoothingEnabled = true;
+                    context.imageSmoothingQuality = "high";
+                    context.drawImage(img, offsetX, offsetY, newWidth, newHeight);
+                    frames.currentIndex = index;
+                }
+            }
+
+            function startAnimation() {
+
+                var tl = gsap.timeline({
+                    scrollTrigger: {
+                        trigger: ".parent",
+                        start: "top top",
+                        scrub: 2
+                    }
+                });
+
+                tl.to(frames, {
+                    currentIndex: frames.maxIndex,
+                    onUpdate: function () {
+                        loadImage(Math.floor(frames.currentIndex));
+                    }
+                });
+            }
+            preloadImages();
+
+
+            function splitText(element) {
+                const words = element.textContent.split("");
+                element.innerHTML = "";
+                words.forEach(word => {
+                    const span = document.createElement("span");
+                    span.textContent = `${word}`;
+                    span.style.display = "inline-block";
+                    element.appendChild(span);
+                });
+            }
+
+            const header = document.querySelector(".heading");
+            const para = document.querySelector(".paragraph");
+
+            splitText(header);
+            splitText(para);
+
+            gsap.timeline()
+                .from(".heading span", {
+                    y: 100,
+                    opacity: 0,
+                    ease: "Power3.ease",
+                    duration: 0.8,
+                    stagger: 0.04
+                })
+                .from(".paragraph span", {
+                    y: 100,
+                    opacity: 0,
+                    ease: "power4.ease",
+                    duration: 0.5,
+                    stagger: 0.025
+                }, "-=1");
+
+
+            const throttleFunction = (func, delay) => {
+                let prev = 0;
+                return (...args) => {
+                    let now = new Date().getTime();
+                    if (now - prev > delay) {
+                        prev = now;
+                        return func(...args);
+                    }
+                };
+            };
+
+            let currentImageIndex = 1;
+            let lastMouseX = 0;
+            let lastMouseY = 0;
+
+            const movementThreshold = 50;
+
+            document.querySelector('.page-1').addEventListener("mousemove", throttleFunction((dets) => {
+                const distanceX = dets.clientX - lastMouseX;
+                const distanceY = dets.clientY - lastMouseY;
+                const distance = Math.sqrt(distanceX ** 2 + distanceY ** 2);
+
+                if (distance > movementThreshold) {
+                    const div = document.createElement('div');
+                    div.classList.add('imagediv');
+                    div.style.left = `${dets.clientX}px`;
+                    div.style.top = `${dets.clientY}px`;
+                    div.style.borderRadius = `25px`;
+
+                    const img = document.createElement('img');
+                    img.setAttribute("src", `media/${currentImageIndex}.webp`);
+                    img.style.transform = 'scale(0)';
+                    div.appendChild(img);
+
+                    document.body.appendChild(div);
+
+                    gsap.to(img, {
+                        scale: 1,
+                        duration: 0.4,
+                        ease: "bounce.ease",
+                        onComplete: () => {
+                            setTimeout(() => {
+                                gsap.to(div, {
+                                    scale: 0,
+                                    duration: 0.4,
+                                    ease: "bounce.ease",
+                                    onComplete: () => {
+                                        div.remove();
+                                    }
+                                });
+                            }, 1500);
+                        }
+                    });
+
+                    currentImageIndex = (currentImageIndex % 6) + 1;
+
+                    lastMouseX = dets.clientX;
+                    lastMouseY = dets.clientY;
+                }
+            }, 200));
+        </script>
+        <script src="lenis.js"></script>
 </body>
 
 </html>
